Form with an input and a button inside added and a unordered list with 3 li added too

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <form action="">
+      <input type="text" name="" id="" placeholder="Entrez vos élements : " />
+      <button>ENTRER</button>
+    </form>
+
+    <ul>
+      <li>Salades</li>
+      <li>Tomates</li>
+      <li>Oignons</li>
+    </ul>
+  </body>
 </html>
