A h2 named Ma Liste de Course added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h2>Ma Liste de Course</h2>
+
     <form action="">
       <input type="text" name="" id="" placeholder="Entrez vos élements : " />
       <button>ENTRER</button>
