--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     <h2>Ma Liste de Course</h2>
 
     <form action="">
-      <input type="text" name="" id="" placeholder="Entrez vos élements : " />
-      <button>ENTRER</button>
+      <input
+        type="text"
+        name=""
+        id="userInput"
+        placeholder="Entrez vos élements : "
+      />
+      <button id="submit">ENTRER</button>
     </form>
 
     <ul>
