New button added in order to switch the page into darkMode or lightMode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <button id="buttonDarkMode">🌙</button>
+
     <h2>Ma Liste de Course</h2>
 
     <input
