Adding a sun emoji in the button darkMode

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="buttonDarkMode">🌙</button>
+    <button id="buttonDarkMode">🌙/🌞</button>
 
-    <h2>Ma Liste de Course</h2>
+    <h1>Ma Liste de Course</h1>
 
     <input
       type="text"
@@ -22,9 +22,8 @@
 
     <ul>
       <li>Salades</li>
-      <li>Tomates</li>
-      <li>Oignons</li>
     </ul>
+
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
